# guitar-pedal

./: CMakeLists.txt  Guitar Signal Generator with Raspberry Pi PICO  README.md  fir_filter.c  guitar_distortion.c
distortion/: CMakeLists.txt  guitar_distortion.c
phaser/: phaser_effect.c
